Bug remove ScheduleService

--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.config.import=optional:configserver:
-server.port=8082
-spring.data.mongodb.uri=mongodb+srv://akanujia:FJIz8omQq5yapPJ2@cluster0.mloxfd4.mongodb.net/test
+server.port=8072
+spring.data.mongodb.uri=mongodb://localhost:27017/test
