Added service registry in discovery server

--- a/discovery-server/src/main/resources/application.properties
+++ b/discovery-server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.config.import=optional:configserver:
 
 spring.application.name=discovery
-server.port=6546
+server.port=8761
 
 eureka.instance.lease-renewal-interval-in-seconds=30
 eureka.instance.lease-expiration-duration-in-seconds=90
@@ -9,3 +9,7 @@ eureka.server.eviction-interval-timer-in-ms=60000
 eureka.server.renewal-percent-threshold=0.5
 eureka.server.renewal-threshold-update-interval-ms=750000
 eureka.server.enable-self-preservation=true
+
+
+eureka.client.register-with-eureka=false
+eureka.client.fetch-registry=false
