--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,3 +1,11 @@
 spring.config.import=optional:configserver:
-server.port=8072
+
+spring.application.name=booking-service
+server.port=8020
+
+eureka.instance.prefer-ip-address=true
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
 spring.data.mongodb.uri=mongodb://localhost:27017/test
