--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -1,3 +1,11 @@
-spring.data.mongodb.uri=mongodb://localhost:27017/test
 spring.config.import=optional:configserver:
-server.port=8082
+
+spring.application.name=schedule-service
+server.port=8000
+
+eureka.instance.prefer-ip-address=true
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.data.mongodb.uri=mongodb://localhost:27017/test
