--- a/driveinMovieApp/src/main/resources/application.properties
+++ b/driveinMovieApp/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.config.import=optional:configserver:
 
-spring.mvc.view.prefix=/views/
+spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
 
