Integrated Catalog Service with ui using feign client

--- a/driveinMovieApp/src/main/resources/application.properties
+++ b/driveinMovieApp/src/main/resources/application.properties
@@ -3,5 +3,7 @@ spring.config.import=optional:configserver:
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
 
+management.endpoints.web.exposure.include=*
+
 
 
