--- a/catalog-service/src/main/resources/application.properties
+++ b/catalog-service/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.config.import=optional:configserver:
 spring.application.name=catalog-service
 server.port=8010
 
-eureka.instance.prefer-ip-address=true
-eureka.client.registerWithEureka = true
-eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#eureka.instance.prefer-ip-address=true
+eureka.client.enabled=false
+#eureka.client.registerWithEureka = true
+#eureka.client.fetchRegistry = true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.data.mongodb.uri=mongodb://localhost:27017/test
