Integration of CatalogService and ScheduleService in ui

--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -3,9 +3,14 @@ spring.config.import=optional:configserver:
 spring.application.name=schedule-service
 server.port=8000
 
-eureka.instance.prefer-ip-address=true
-eureka.client.registerWithEureka = true
-eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.enabled=false
+#eureka.instance.prefer-ip-address=true
+#eureka.client.registerWithEureka = true
+#eureka.client.fetchRegistry = true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.data.mongodb.uri=mongodb://localhost:27017/test
+
+time.slotTimeA=12:00 AM
+time.slotTimeB=03:00 AM
+time.SlotTimeC=09:00 PM
