--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -3,9 +3,10 @@ spring.config.import=optional:configserver:
 spring.application.name=booking-service
 server.port=8020
 
-eureka.instance.prefer-ip-address=true
-eureka.client.registerWithEureka = true
-eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.enabled=false
+#eureka.instance.prefer-ip-address=true
+#eureka.client.registerWithEureka = true
+#eureka.client.fetchRegistry = true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 spring.data.mongodb.uri=mongodb://localhost:27017/test
