added test cases to sschedule-service

--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.data.mongodb.uri=mongodb://localhost:27017/test
 
 time.slotTimeA=12:00 AM
 time.slotTimeB=03:00 AM
-time.SlotTimeC=09:00 PM
+time.slotTimeC=09:00 PM
