added oauth in ui

--- a/security test/fromtui/src/main/resources/application.properties
+++ b/security test/fromtui/src/main/resources/application.properties
@@ -3,9 +3,11 @@ server.port=8082
 
 
 spring.security.oauth2.client.registration.something.client-id=authorization
-spring.security.oauth2.client.registration.something.client-secret=QzQheiXTCS8TyhNLMVWJQWE3zFYT0XU7
+spring.security.oauth2.client.registration.something.client-secret=KYo9XF8nh4PPJeSvhUCwPJZ5BRANL7Zw
 spring.security.oauth2.client.registration.something.scope=openid
 spring.security.oauth2.client.registration.something.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.something.redirect-uri=http://localhost:8082/login/oauth2/code/authorization
 
 spring.security.oauth2.client.provider.something.issuer-uri=http://localhost:7080/realms/test
+
+#logging.level.org.springframework.security.web.FilterChainProxy=trace
