--- a/security test/gateway/src/main/resources/application.properties
+++ b/security test/gateway/src/main/resources/application.properties
@@ -4,4 +4,6 @@ eureka.instance.prefer-ip-address=true
 eureka.client.register-with-eureka=false
 spring.cloud.gateway.discovery.locator.enabled=true
 
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/master/protocol/openid-connect/certs
+server.port=8010
+
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/test/protocol/openid-connect/certs
