--- a/booking-service/src/main/resources/application.properties
+++ b/booking-service/src/main/resources/application.properties
@@ -1,12 +1,24 @@
-spring.config.import=optional:configserver:
-
 spring.application.name=booking-service
-server.port=8020
+spring.config.import=optional:configserver:http://localhost:8032
+server.port=8000
 
-eureka.client.enabled=false
-#eureka.instance.prefer-ip-address=true
-#eureka.client.registerWithEureka = true
-#eureka.client.fetchRegistry = true
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+info.app.name=BOOKING service
+info.app.description=Intern Movie
+info.app.version=0.0.2
+management.info.env.enabled = true
 
-spring.data.mongodb.uri=mongodb://localhost:27017/test
+management.endpoints.web.exposure.include=*
+
+eureka.instance.prefer-ip-address=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry= true
+eureka.client.serviceUrl.defaultZone = http://discoveryserver:8070/eureka/
+
+
+
+spring.data.mongodb.uri=mongodb://mongodb:27017/bookingdata
+
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
