--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,7 +1,18 @@
 spring.application.name=config-server
-server.port=7288
+server.port=8032
 
 spring.profiles.active=git
 spring.cloud.config.server.git.uri=https://github.com/kumar-kanujia/drive-in-movie-jfs-properties.git
 spring.cloud.config.server.git.clone-on-start=true
 spring.cloud.config.server.git.default-label=main
+
+info.app.name=CONFIG servcer
+info.app.description=Intern Movie
+info.app.version=0.0.2
+management.info.env.enabled = true
+
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
