--- a/gateway-server/pom.xml
+++ b/gateway-server/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>org.jfs.drive-in</groupId>
 	<artifactId>gateway-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>gateway-server</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
@@ -58,6 +58,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+				<image>
+						<name>
+							kumarkanujia/${project.artifactId}:${project.version}
+						</name>
+					</image>
+					<pullPolicy>IF_NOT_PRESENT</pullPolicy>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
