--- a/gateway-server/src/main/resources/application.properties
+++ b/gateway-server/src/main/resources/application.properties
@@ -1,6 +1,13 @@
 spring.application.name=gateway-sever
 
-spring.config.import=optional:configserver:
+server.port=8072
+
+spring.config.import=optional:configserver:http://localhost:8032
+
+
+info.app.name=Gateway Server For Movies 
+info.app.description=Movies Booking Server Application
+info.app.version=0.0.2
 
 management.endpoints.web.exposure.include=*
 
@@ -10,8 +17,13 @@ management.endpoint.gateway.enabled=true
 spring.cloud.gateway.discovery.locator.lowerCaseServiceId=true
 spring.cloud.gateway.discovery.locator.enabled=true
 
-server.port=8072
-eureka.instance.preferIpAddress = true 
+
+eureka.instance.prefer-ip-address = true 
 eureka.client.registerWithEureka = true
 eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka/
+eureka.client.serviceUrl.defaultZone = http://discoveryserver:8761/eureka/
+
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://zipkin:9411/api/v2/spans
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
