--- a/schedule-service/src/main/resources/application.properties
+++ b/schedule-service/src/main/resources/application.properties
@@ -1,16 +1,30 @@
-spring.config.import=optional:configserver:
-
 spring.application.name=schedule-service
-server.port=8000
+spring.config.import=optional:configserver:http://localhost:8032
 
-eureka.client.enabled=false
-#eureka.instance.prefer-ip-address=true
-#eureka.client.registerWithEureka = true
-#eureka.client.fetchRegistry = true
-#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+server.port=8050
 
-spring.data.mongodb.uri=mongodb://localhost:27017/test
+info.app.name=SCHEDULE service
+info.app.description=Intern Movie
+info.app.version=0.0.2
+management.info.env.enabled = true
+
+management.endpoints.web.exposure.include=*
+
+eureka.instance.prefer-ip-address=true
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry= true
+eureka.client.serviceUrl.defaultZone = http://discoveryserver:8070/eureka/
+
+
+
+spring.data.mongodb.uri=mongodb://mongodb:27017/scheduledata
 
 time.slotTimeA=12:00 AM
 time.slotTimeB=03:00 AM
 time.slotTimeC=09:00 PM
+
+management.tracing.sampling.probability=1.0
+management.zipkin.tracing.endpoint=http://localhost:9411/api/v2/spans
+management.metrics.distribution.percentiles-histogram.http.server.requests=true
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+
