--- a/docker-compose/docker-compose.yml
+++ b/docker-compose/docker-compose.yml
@@ -10,6 +10,21 @@ services:
     networks:
       - movie-app-network
 
+  keycloak:
+    image: quay.io/keycloak/keycloak:latest
+    ports:
+        - "7080:8080"
+    environment:
+        - KEYCLOAK_ADMIN=aman
+        - KEYCLOAK_ADMIN_PASSWORD=aman
+    networks:
+      - movie-app-network
+    command: 
+      - start-dev
+      - --import-realm
+    volumes:
+      - /home/keycloak/realm.json:/opt/keycloak/data/import/realm.json
+
   prometheus:
     image: prom/prometheus:latest
     ports:
