--- a/docker-compose/prometheus.yml
+++ b/docker-compose/prometheus.yml
@@ -1,6 +1,6 @@
 global:
-  scrape_interval:     5s # Set the scrape interval to every 5 seconds.
-  evaluation_interval: 5s # Evaluate rules every 5 seconds.
+  scrape_interval: 5s
+  evaluation_interval: 5s 
 scrape_configs:
   - job_name: 'catalog'
     metrics_path: '/actuator/prometheus'
