--- a/driveinMovieApp/src/main/resources/application.properties
+++ b/driveinMovieApp/src/main/resources/application.properties
@@ -8,10 +8,10 @@ management.endpoints.web.exposure.include=*
 server.port=8082
 
 
-spring.security.oauth2.client.registration.authorization.client-id=authorization
-spring.security.oauth2.client.registration.authorization.client-secret=QzQheiXTCS8TyhNLMVWJQWE3zFYT0XU7
-spring.security.oauth2.client.registration.authorization.scope=openid
-spring.security.oauth2.client.registration.authorization.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.authorization.redirect-uri=http://localhost:8082/login/oauth2/code/authorization
+spring.security.oauth2.client.registration.movieboxwebservice.client-id=movieboxwebservice
+spring.security.oauth2.client.registration.movieboxwebservice.client-secret=mfvoHVeOYdXs96vB9CcxRXX56c5g82It
+spring.security.oauth2.client.registration.movieboxwebservice.scope=openid
+spring.security.oauth2.client.registration.movieboxwebservice.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.movieboxwebservice.redirect-uri=http://localhost:8082/login/oauth2/code/movieboxwebservice
 
-spring.security.oauth2.client.provider.authorization.issuer-uri=http://localhost:7080/realms/test
+spring.security.oauth2.client.provider.movieboxwebservice.issuer-uri=http://localhost:7080/realms/moviebox
