--- a/driveinMovieApp/src/main/resources/application.properties
+++ b/driveinMovieApp/src/main/resources/application.properties
@@ -15,3 +15,8 @@ spring.security.oauth2.client.registration.movieboxwebservice.authorization-gran
 spring.security.oauth2.client.registration.movieboxwebservice.redirect-uri=http://localhost:8082/login/oauth2/code/movieboxwebservice
 
 spring.security.oauth2.client.provider.movieboxwebservice.issuer-uri=http://localhost:7080/realms/moviebox
+
+
+feign.client.booking-service=http://localhost:8072/booking-service/
+feign.client.catalog-service=http://localhost:8072/catalog/
+feign.client.schedule-service=http://localhost:8072/schedule-service/
