--- a/security test/fromtui/src/main/resources/application.properties
+++ b/security test/fromtui/src/main/resources/application.properties
@@ -2,10 +2,14 @@ spring.config.import=optional:configserver:
 server.port=8082
 
 
-spring.security.oauth2.client.registration.something.client-id=authorization
-spring.security.oauth2.client.registration.something.client-secret=KYo9XF8nh4PPJeSvhUCwPJZ5BRANL7Zw
-spring.security.oauth2.client.registration.something.scope=openid
-spring.security.oauth2.client.registration.something.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.something.redirect-uri=http://localhost:8082/login/oauth2/code/authorization
+spring.security.oauth2.client.registration.test.client-id=test
+spring.security.oauth2.client.registration.test.client-secret=ojVvZSUZhznUw8jhfNcuBPdL1RATwqUl
+spring.security.oauth2.client.registration.test.scope=openid
+spring.security.oauth2.client.registration.test.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.test.redirect-uri=http://localhost:8082/login/oauth2/code/test
 
-spring.security.oauth2.client.provider.something.issuer-uri=http://localhost:7080/realms/test
+spring.security.oauth2.client.provider.test.issuer-uri=http://localhost:7080/realms/test
+
+spring.cloud.openfeign.oauth2.enabled=true
+spring.cloud.openfeign.oauth2.clientRegistrationId=keyclock
+
