--- a/security test/gateway/src/main/resources/application.properties
+++ b/security test/gateway/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.cloud.gateway.discovery.locator.enabled=true
 server.port=8010
 
 spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:7080/realms/test/protocol/openid-connect/certs
+
+#spring.security.oauth2.client.provider.something.issuer-uri=http://localhost:7080/realms/test
